--- a/Assignment/nbproject/project.properties
+++ b/Assignment/nbproject/project.properties
@@ -28,9 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\FPT\\PRJ301\\libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\FPT\\PRJ301\\libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.sqljdbc42.jar=D:\\FPT\\PRJ301\\libs\\sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.sqljdbc42.jar=libs\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
